# kobo-book-downloader

./: .dockerignore  .env.example  .gitignore  .python-version  Dockerfile  MANIFEST.in  README.md  build.sh  dev-requirements.txt  docker-compose.yml  entrypoint.sh  kobo-book-downloader.xml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: issue-report.md
.github/workflows/: build.yml  release.yml
kobo-book-downloader/: Commands.py  Globals.py  Kobo.py  KoboDrmRemover.py  LogFormatter.py  Settings.py  __main__.py
kobo_book_downloader/: __init__.py  actions.py  globals.py  kobo.py  settings.py
kobo_book_downloader/commands/: book.py  user.py
kobodl/: __init__.py  __main__.py  actions.py  app.py  debug.py  globals.py  kobo.py  koboDrmRemover.py  settings.json  settings.py
kobodl/commands/: book.py  user.py  utils.py
kobodl/templates/: books.j2  error.j2  footer.html  header.html  instructions.html  success.j2  users.j2
webapp/: app.py  backend.py
webapp/templates/: index.html
