[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ['py38']
exclude = '\.eggs|\.git|\.mypy_cache|\.tox|\.env|\.venv|env|venv|_build|buck-out|build|dist'

[tool.isort]
line_length = 100
use_parentheses = true
include_trailing_comma = true
multi_line_output = 3

[tool.poetry]
name = "kobodl"
version = "0.9.0"
description = "Kobo Book Downloader"
authors = ["Brandon Davis <kobodl@subdavis.com>"]
license = "Unlicense"
include = [
  "kobodl/templates",
  "kobodl/commands",
]
readme = "README.md"
repository = "https://github.com/subdavis/kobo-book-downloader.git"
keywords = ["Kobo", "eBook", "Audiobook", "Downloader", "DRM"]

[tool.poetry.scripts]
kobodl = "kobodl:cli"

[tool.poetry.dependencies]
python = ">=3.6,<3.10"
beautifulsoup4 = "<5.0.0"
click = "<8"
dataclasses = "<1.0.0"
dataclasses-json = "<0.6.0"
flask = "^1.1.0"
pycryptodome = "<4"
requests = "^2.25"
tabulate = "<0.9.0"
pyperclip = "^1.8.2"

[tool.poetry.dev-dependencies]
tox = "^3.24.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
